fix: Java8 compat CORS + auto schema init